added h3 in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Первый заголовок</h1>
     <h2>Второй заголовок</h2>
+    <h3>Третий заголовок</h3>
 </body>
 <script src="script.js"></script>
 </html>
